--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
-                <img src="logo.jpg" alt="Azz Internet Hub Logo" class="logo">
+                <img src="bansa.jpg" alt="Azz Internet Hub Logo" class="logo">
                 <h1>Voucher Submission Portal</h1>
                 <p>Submit your voucher details for safekeeping</p>
             </div>
